<resources>
    <string name="app_name">SOLUSI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bawah_pie_chart">Rekapitulasi hasil berdasarkan entri data Model C1, merupakan hasil sementara dan bukan hasil final. Jika terdapat kesalahan dalam Model C1 akan dilakukan perbaikan pada proses rekapitulasi ditingkat atasnya</string>

    <!--String tata cara-->
    <string name="tata_cara_1">Masuk melalui pintu yang telah disediakan di TPS.</string>
    <string name="tata_cara_2">Serahkan formulir C6 dan tunggu hingga panitia menyebutkan namamu.</string>
    <string name="tata_cara_3">Ambil surat suara.</string>
    <string name="tata_cara_4">Lakukan pencoblosan di bilik suara. Pastikan suaramu sah dan rahasia.</string>
    <string name="tata_cara_5">Lipat surat suara seusai petunjuk dan masukkan ke kotak suara yang tersedia.</string>
    <string name="tata_cara_6">Jangan lupa celupkan jarimu ke tinta sebagai bukti kamu telah memberikan suaramu.</string>
    <string name="tata_cara_7">Selesai! Kini kamu secara resmi telah aktif berpartisipasi dalam demokrasi.</string>

    <!--String paslon gubernur-->
    <string-array name="paslon_gubernur">
        <item>Ridwan Kamil - Uu Ruzhanul Ulum</item>
        <item>Tubagus Hasanuddin - Anton Charliyan</item>
        <item>Sudrajat - Ahmad Syaikhu</item>
        <item>Deddy Mizwar - Dedi Mulyadi</item>
    </string-array>

    <string-array name="timeline_date">
        <item>12 - 13 Februari 2018</item>
        <item>15 - 23 Februari 2018</item>
        <item>24 - 26 Juni 2018</item>
        <item>27 Juni 2018</item>
        <item>28 Juni - 9 Juli 2018</item>
    </string-array>

    <string-array name="timeline_desc">
        <item>Pengundian dan Pengumuman Paslon</item>
        <item>Debat Publik/Terbuka</item>
        <item>Masa Tenang/Pembersihan Alat Peraga</item>
        <item>Pemungutan dan Penghitungan Suara di TPS</item>
        <item>Rekapitulasi Hasil Penghitungan Suara</item>
    </string-array>

    <!--List kota kabupaten Jawa Barat-->
    <string-array name="city_list">
        <item>Kota Bandung</item>
        <item>Kabupaten Bandung Barat</item>
        <item>Kota Bogor</item>
        <item>Kabupaten Bogor</item>
        <item>Kota Cirebon</item>
        <item>Kabupaten Cirebon</item>
        <item>Kota Sukabumi</item>
        <item>Kota Banjar</item>
        <item>Kota Bekasi</item>
        <item>Kabupaten Purwakarta</item>
        <item>Kabupaten Sumedang</item>
        <item>Kabupaten Subang</item>
        <item>Kabupaten Kuningan</item>
        <item>Kabupaten Majalengka</item>
        <item>Kabupaten Garut</item>
        <item>Kabupaten Ciamis</item>
    </string-array>

    <!--List Paslon per-kota kabupaten Jawa Barat-->
    <string-array name="kota_bandung">
        <item>Nurul Arifin-Chairul Yaqin Hidayat (Ruli)</item>
        <item>Yossi Irianto-Aries Supriatna</item>
        <item>Oded M Danial-Yana Mulyana</item>
    </string-array>

    <string-array name="kabupaten_bandung_barat">
        <item>Elin Suharliah-Maman Sulaeman Sunjaya</item>
        <item>Doddy Imron Cholid-Pupu Sari Rohayati</item>
        <item>Aa Umbara Sutisna-Hengky Kurniawan</item>
    </string-array>

    <string-array name="kota_bogor">
        <item>Ahmad Ru\'yat-Zainul Mutaqin</item>
        <item>Edgar Suratman-Sefwelly Gianyar Djoyoningrat</item>
        <item>Bima Arya Sugiarto-Dedie A Rachiem</item>
        <item>Dadang Danubrata-Sugeng Teguh Santoso</item>
    </string-array>

    <string-array name="kabupaten_bogor">
        <item>Fitri Putra Nugraha-Bayu Syahjohan</item>
        <item>Ade Yasin-Iwan Setiawan</item>
        <item>Ade Ruhandi-Ingrid Palupi Kansil</item>
        <item>Gu­nawan Hasan-Ficky Rhoma Irama</item>
        <item>Ade Wardana-Asep Ruhiyat</item>
    </string-array>

    <string-array name="kota_cirebon">
        <item>Bamunas Setiawan Budiman-Effendi Edo\'</item>
        <item>Nasrudin Azis-Ety Herawati</item>
    </string-array>

    <string-array name="kabupaten_cirebon">
        <item>Kalinga-Santi</item>
        <item>Sunjaya-Imron</item>
        <item>Rahmat-Yayat</item>
        <item>Lutfi-Komar</item>
    </string-array>

    <string-array name="kota_sukabumi">
        <item>Jona Arizona-Hanafie Zain</item>
        <item>Achmad Fahmi-Andri Hamami</item>
        <item>Mulyono-Ima Slamet</item>
        <item>Dedi R Wijaya-Hikmat Nuristawan</item>
    </string-array>

    <string-array name="kota_banjar">
        <item>Ade Uu Sukaesih-Nana Suryana</item>
        <item>Maman Suryaman-Irma Bastaman</item>
    </string-array>

    <string-array name="kota_bekasi">
        <item>Rahmat Effendi-Tri Adhianto</item>
        <item>Nur Supriyanto-Adhy Firdaus</item>
    </string-array>

    <string-array name="kabupaten_purwakarta">
        <item>Padil Karsoma-Acep Maman</item>
        <item>Anne Ratna Mustika-Aming</item>
        <item>Zainal Arifin-Luthfi Bamala</item>
    </string-array>

    <string-array name="kabupaten_sumedang">
        <item>Dony Ahmad Munir-Erwan Setiawan</item>
        <item>Setya Widodo-Sonia Sugian</item>
        <item>Zaenal Alimin-Asep Kurnia</item>
        <item>Irwansyah Putra-Sidik Jafar</item>
        <item>Eka Setiawan-Mohammad Agung Anugrah</item>
    </string-array>

    <string-array name="kabupaten_subang">
        <item>Ruhimat-Agus Masykur</item>
        <item>Imas Aryumningsih-Sutarno</item>
        <item>Dedi J-Budi Setiadi</item>
    </string-array>

    <string-array name="kabupaten_kuningan">
        <item>Toto Taufikuroham Kosim-Yosa Octora Santono</item>
        <item>Dudy Pamuji-Udin Kusnedi</item>
        <item>Acep Purnama-Muhamad Ridho Suganda</item>
    </string-array>

    <string-array name="kabupaten_majalengka">
        <item>Maman Imanulhaq-Jefry Romdony</item>
        <item>Sanwasi-Taufan Ansyar</item>
        <item>Karna Sobahi-Tarsono Mardiana</item>
    </string-array>

    <string-array name="kabupaten_garut">
        <item>Rudy Gunawan-Helmi Budiman</item>
        <item>Iman Alirahman-Dedi Hasan Bachtiar</item>
        <item>Suryana-Wiwin</item>
        <item>Agus Hamdani-Pradana Aditya Wicaksana</item>
    </string-array>

    <string-array name="kabupaten_ciamis">
        <item>Herdiat-Yana D Putra</item>
        <item>Iing-Oih</item>
    </string-array>
    <string-array name="kabupaten">
        <item>-------------------Pilih Kabupaten-------------------</item>
        <item>Kota Yogyakarta</item>
        <item>Bantul</item>
        <item>Gunungkidul</item>
        <item>Kulon Progo</item>
        <item>Sleman</item>
    </string-array>

    <string-array name="kecamatan">
        <item>-------------------Pilih Kecamatan------------------</item>
        <item>Tegalrejo</item>
        <item>Jetis</item>
        <item>Gondokusuman</item>
        <item>Berbah</item>
        <item>Cangkringan</item>
        <item>Depok</item>
        <item>Bambang Lipuro</item>
        <item>Banguntapan</item>
        <item>Bantul</item>
        <item>Girimulyo</item>
        <item>Galur</item>
        <item>Kokap</item>
        <item>Gedangsari</item>
        <item>Ngawen</item>
        <item>Girisubo</item>
    </string-array>

    <string-array name="kelurahan">
        <item>--------------------Pilih Kelurahan-------------------</item>
        <item>Jogo Tirto</item>
        <item>Argo Mulyo</item>
        <item>Catur Tunggal</item>
        <item>Kricak</item>
        <item>Terban</item>
        <item>Patangpuluhan</item>
        <item>Jagalan</item>
        <item>Mulyodadi</item>
        <item>Ringin Harjo</item>
        <item>Banaran</item>
        <item>Purwosari</item>
        <item>Jatirejo</item>
        <item>Mulo</item>
        <item>Gari</item>
        <item>Duwet</item>
    </string-array>

    <string-array name="kabupaten_sleman">
        <item>-------------------Pilih Kecamatan-------------------</item>
        <item>Berbah</item>
        <item>Cangkringan</item>
        <item>Depok</item>
    </string-array>

    <string-array name="kabupaten_bantul">
        <item>-------------------Pilih Kecamatan-------------------</item>
        <item>Bambang Lipuro</item>
        <item>Banguntapan</item>
        <item>Bantul</item>
    </string-array>

    <string-array name="kabupaten_kulonprogo">
        <item>-------------------Pilih Kecamatan-------------------</item>
        <item>Girimulyo</item>
        <item>Galur</item>
        <item>Kokap</item>
    </string-array>

    <string-array name="kabupaten_gunungkidul">
        <item>-------------------Pilih Kecamatan-------------------</item>
        <item>Gedangsari</item>
        <item>Ngawen</item>
        <item>Girisubo</item>
    </string-array>
    <string name="title_activity_gunungkidul">Gunungkidul</string>
</resources>
